--- a/w1d1intro/compute.html
+++ b/w1d1intro/compute.html
@@ -7,13 +7,13 @@
     <title>Document</title>
     <script>
         function add(){
-            let nummer11=document.getElementById("input").value;
-            document.getElementById("output").innerHTML=3*number11
+            let num=document.getElementById("input").value;
+            document.getElementById("output").innerHTML=4*num
         }
     </script>
 </head>
 <body>
-   input  <input type="text" name="" id="input">
+   input: <input type="text" name="" id="input"><br/>
     <button id="btn" onclick="add()">button</button>
     output: <p id="output"> </p>
 </body>
